--- a/js-text-chat/opentok.js-text-chat/index.html
+++ b/js-text-chat/opentok.js-text-chat/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>OpenTok TextChat demo</title>
     <link rel="stylesheet" href="./css/theme.css" />
+    <link rel="stylesheet" href="./css/widget.css" />
     <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
     <script src="dist/opentok-text-chat.js"></script>
   </head>
@@ -25,44 +26,10 @@
       // this session to be connected. It will connect the chat to the session
       // automatically once the session connects.
       var session = OT.initSession(apiKey, sessionId);
-      var chatWidget = new OTSolution.TextChat.ChatWidget({
+      var chatWidget = new OTSolution.TextChat.ChatUI({
         session: session,
         container: '#chat'
       });
-
-//      function connect(token) {
-//        disableButtons();
-//        session.connect(token, function (err) {
-//          if (!err) {
-//            showConnection();
-//          }
-//          else {
-//            console.error(err);
-//            enableButtons();
-//          }
-//        });
-//      }
-//
-//      function showConnection() {
-//        var connectedAs = document.getElementById('connected-as');
-//        connectedAs.textContent = 'Connected as ' + session.connection.data;
-//      }
-
-//      function disableButtons() {
-//        setButtons(false);
-//      }
-//
-//      function enableButtons() {
-//        setButtons(true);
-//      }
-
-//      function setButtons(isEnabled) {
-//        var connectedAs = document.getElementById('connected-as');
-//        var buttons = connectedAs.querySelectorAll('button');
-//        buttons = Array.prototype.slice.call(buttons);
-//        buttons.forEach(function (button) { button.disabled = !isEnabled; });
-//      }
-
     </script>
   </body>
 </html>
