--- a/js-text-chat/opentok.js-text-chat/index.html
+++ b/js-text-chat/opentok.js-text-chat/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/theme.css" />
     <link rel="stylesheet" href="./css/widget.css" />
     <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
-    <script src="dist/opentok-text-chat.js"></script>
+    <script src="../sample-app/public/js/components/opentok-text-chat.js"></script>
   </head>
   <body>
     <script>
