--- a/js-text-chat/sample-app/public/index.html
+++ b/js-text-chat/sample-app/public/index.html
@@ -9,6 +9,7 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/theme.css">
 
 	<!-- JS -->
 	<script src="https://static.opentok.com/v2/js/opentok.min.js" type="text/javascript" defer></script>
@@ -16,7 +17,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" defer></script>
 	<script src="js/components/one-to-one-communication.js" type="text/javascript" defer></script>
     <script src="js/components/otkanalytics.js" type="text/javascript" defer></script>
-    <script src="js/components/opentok-text-chat.js" type="text/javascript" defer></script>
+    <script src="../../opentok.js-text-chat/src/text_chat_acc_pack.js" type="text/javascript" defer></script>
+    <script src="js/components/accelerator_pack.js" type="text/javascript" defer></script>
 	<script src="js/app.js" type="text/javascript" defer></script>
 	<script src="js/moment.js" type="text/javascript" defer></script>
 	<script src="js/livestamp.min.js" type="text/javascript" defer></script>
