--- a/js-screensharing-annotation/sample-app/public/index.html
+++ b/js-screensharing-annotation/sample-app/public/index.html
@@ -26,15 +26,16 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="video-container">
+        <div id="videoContainer" class="video-container">
             <div id="videoHolderSmall" class="video-wrap primary-video video-background"></div>
             <div class="local-controls">
                 <div class="video-control circle video enabled hidden" id="enableLocalVideo"></div>
                 <div class="video-control circle call" id="callActive"></div>
                 <div class="video-control circle microphone enabled hidden" id="enableLocalAudio"></div>
-                <div class="video-control circle share-screen disabled hidden" id="startScreenSharing"></div>
+                <div class="video-control circle share-screen disabled hidden" id="shareScreen"></div>
             </div>
             <div id="videoHolderBig" class="video-wrap secondary-video"></div>
+            <!--<div id="videoHolderScreenShare" class="video-wrap hidden"></div>-->
             <div id="remoteControls" class="remote-controls hidden">
                 <div class="video-control audio" id="enableRemoteAudio"></div>
                 <div class="video-control video" id="enableRemoteVideo"></div>
