Screensharing and annotation working for publisher.

--- a/js-screensharing-annotation/opentok.js-ss-annotation/screenshare.html
+++ b/js-screensharing-annotation/opentok.js-ss-annotation/screenshare.html
@@ -42,6 +42,12 @@
         box-sizing: border-box;
         height: 100vh;
     }
+    
+    canvas {
+      top: 0;
+      z-index: 1000;
+    }
+    
     .main-wrap {
       width: 100%;
       height: 100%;
@@ -67,6 +73,7 @@
       top: 275px;
       right: 0;
       width: 40px;
+      z-index: 1001;
     }
     .fixed-container .toolbar-wrap {
         position:absolute;
