--- a/js-screensharing-annotation/sample-app/public/index.html
+++ b/js-screensharing-annotation/sample-app/public/index.html
@@ -17,6 +17,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" defer></script>
 	<script src="js/components/one-to-one-communication.js" type="text/javascript" defer></script>
     <script src="js/components/otkanalytics.js" type="text/javascript" defer></script>
+    <script src="js/components/opentok-annotation.js" type="text/javascript" defer></script>
     <script src="js/components/screenshare-annotation-acc-pack.js" type="text/javascript" defer></script>
     <script src="js/components/accelerator-pack.js" type="text/javascript" defer></script>
 	<script src="js/app.js" type="text/javascript" defer></script>
@@ -28,7 +29,7 @@
     <div class="main-container">
         <div id="videoContainer" class="video-container">
             <div id="videoHolderSmall" class="video-wrap primary-video video-background"></div>
-            <div class="local-controls">
+            <div id="feedControls" class="local-controls">
                 <div class="video-control circle video enabled hidden" id="enableLocalVideo"></div>
                 <div class="video-control circle call" id="callActive"></div>
                 <div class="video-control circle microphone enabled hidden" id="enableLocalAudio"></div>
