Subscribing to screen share feed.

--- a/js-screensharing-annotation/sample-app/public/index.html
+++ b/js-screensharing-annotation/sample-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>AV Sample App</title>
+	<title>Screen Sharing + Annotation Acc Pack</title>
 
 	<!--[if IE]><link rel="shortcut icon" href="images/favicon.ico"><![endif]-->
 	<link rel="icon" href="images/favicon.png">
@@ -41,9 +41,8 @@
                 <div class="video-control video" id="enableRemoteVideo"></div>
             </div>
         </div>
-        <div id="chat-container">
-
-        </div>
+        <div class="status hidden">Annotating on external window</div>
+        <div id="toolbar"></div>
     </div>
 </body>
 </html>
