Subscriber can annotate.

--- a/js-screensharing-annotation/sample-app/public/index.html
+++ b/js-screensharing-annotation/sample-app/public/index.html
@@ -38,7 +38,7 @@
                 <div class="video-control circle share-screen disabled hidden" id="shareScreen"></div>
             </div>
             <div id="videoHolderBig" class="video-wrap secondary-video"></div>
-            <!--<div id="videoHolderScreenShare" class="video-wrap hidden"></div>-->
+            <div id="videoHolderSharedScreen" class="video-wrap hidden"></div>
             <div id="remoteControls" class="remote-controls hidden">
                 <div class="video-control audio" id="enableRemoteAudio"></div>
                 <div class="video-control video" id="enableRemoteVideo"></div>
