Add the link to the Accelerator Pack file
This file is going to be part of the sample, so it will be added
to the list of required files in the index.html.

--- a/js-text-chat/sample-app/public/index.html
+++ b/js-text-chat/sample-app/public/index.html
@@ -16,6 +16,7 @@
 	<script src="https://code.jquery.com/jquery-1.10.2.js" defer></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" defer></script>
 	<script src="js/components/one-to-one-communication.js" type="text/javascript" defer></script>
+	<script src="js/components/accelerator-pack.js" type="text/javascript" defer></script>
 	<script src="js/app.js" type="text/javascript" defer></script>
 	<script src="js/moment.js" type="text/javascript" defer></script>
 	<script src="js/livestamp.min.js" type="text/javascript" defer></script>
