Resolving issues around annotation canvas sizing.

--- a/js-screensharing-annotation/sample-app/public/index.html
+++ b/js-screensharing-annotation/sample-app/public/index.html
@@ -38,13 +38,15 @@
                 <div class="video-control circle share-screen disabled hidden" id="shareScreen"></div>
             </div>
             <div id="videoHolderBig" class="video-wrap secondary-video"></div>
-            <div id="videoHolderSharedScreen" class="video-wrap hidden"></div>
+        <div id="videoHolderSharedScreen" class="video-wrap hidden shared-screen"></div>
             <div id="remoteControls" class="remote-controls hidden">
                 <div class="video-control audio" id="enableRemoteAudio"></div>
                 <div class="video-control video" id="enableRemoteVideo"></div>
             </div>
         </div>
-        <div id="toolbar"></div>
+        <div class="annotation-toolbar-container">
+            <div id="toolbar"></div>
+        </div>
     </div>
 </body>
 </html>
