Hide OT mute button.

--- a/js-screensharing-annotation/opentok.js-ss-annotation/screenshare.html
+++ b/js-screensharing-annotation/opentok.js-ss-annotation/screenshare.html
@@ -120,11 +120,14 @@
         height: 100%;
         width: 100%;
     }
-
     .OT_video-element {
         height: 100%;
         width: 100%;
     }
+    .OT_edge-bar-item {
+      display: none;
+    }
+    
 </style>
 </head>
 <body>
