Handle manual window close for primary and external.

--- a/js-screensharing-annotation/opentok.js-ss-annotation/screenshare.html
+++ b/js-screensharing-annotation/opentok.js-ss-annotation/screenshare.html
@@ -15,7 +15,7 @@
         alert('Something went wrong: You must pass an OpenTok annotation toolbar object into the window.')
     } else {
         opener = window.opener;
-        opener.onbeforeunload = function(){ window.close(); };
+        window.onbeforeunload = window.triggerCloseEvent;
     }
 
     var createContainerElements = function () {
