--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <div id="main" class="main-container">
-        <div class="video-container">
+        <div id="videoContainer" class="video-container">
             <div id="sharingMask" class="sharing-mask" style="display:none;">
                 <div class="sharing-text">Annotating on External Screen</div>
             </div>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="annotation-toolbar-container">
-            <div id="toolbar"></div>
+            <div id="toolbar" style="display:none;"></div>
         </div>
     </div>
 </body>
