--- a/js/sample-app/public/index.html
+++ b/js/sample-app/public/index.html
@@ -9,8 +9,10 @@
     <link rel="icon" href="images/favicon.png">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/theme.css">
+    <!--<link rel="stylesheet" href="css/styles.css">-->
+    <!--<link rel="stylesheet" href="css/theme.css">-->
+    <link rel="stylesheet" href="https://assets.tokbox.com/solutions/css/style.css">
+
 
     <!-- JS -->
     <script src="https://static.opentok.com/v2/js/opentok.min.js" type="text/javascript" defer></script>
@@ -29,8 +31,8 @@
             <div id="videoHolderSmall" class="video-wrap primary-video video-background"></div>
             <div id="feedControls" class="local-controls">
                 <div id="enableLocalVideo" class="video-control circle video enabled" style="display:none;"></div>
-                <div id="callActive" class="video-control circle call"></div>
-                <div id="enableLocalAudio" class="video-control circle microphone enabled" style="display:none;"></div>
+                <div id="callActive" class="ots-video-control circle call"></div>
+                <div id="enableLocalAudio" class="ots-video-control circle microphone enabled" style="display:none;"></div>
             </div>
             <div id="videoHolderBig" class="video-wrap secondary-video" style="display:none;"></div>
             <div id="remoteControls" class="remote-controls" style="display:none;">
